[package]
name = "breakcore-dog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = [
	"macros",
	"rt-multi-thread",
	"signal"
] }
serde_json = "1.0.94"
tracing = "0.1"
tracing-subscriber = "0.3.16"
tracing-futures = "0.2"
rand = "0.8.5"


[dependencies.serenity]
features = ["client", "standard_framework", "voice", "rustls_backend"]
version = "0.11.5"

[dependencies.songbird]
version = "0.3"
features = ["yt-dlp", "builtin-queue"]
